--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -17,3 +17,24 @@ a {
     margin-left: -200px;
   }
 }
+
+.play {
+  box-sizing: border-box;
+  width: 74px;
+  height: 74px;
+  border-width: 37px 0 37px 74px;
+  border-style: solid;
+  border-color: transparent transparent transparent white;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
