--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -4,6 +4,10 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
+[v-cloak] {
+  display: none;
+}
+
 a {
   color: #fff;
   text-decoration: underline;
