--- a/source/_assets/scss/app.scss
+++ b/source/_assets/scss/app.scss
@@ -1,16 +1,19 @@
+@import '~bootstrap/scss/bootstrap';
+
+
 body {
   background: #0000fe;
   color:#fff;
   font-family: Helvetica, Arial, sans-serif;
 }
 
-[v-cloak] {
-  display: none;
-}
-
 a {
   color: #fff;
   text-decoration: underline;
+}
+
+[x-cloak] {
+  display: none!important;
 }
 
 @media (min-width: 768px) {
