--- a/source/_assets/scss/_ecwid.scss
+++ b/source/_assets/scss/_ecwid.scss
@@ -1,24 +1,214 @@
 
 
+.ecwid {
+  font-weight: var(--body-font-weight)!important;
+}
+
+.ec-footer {
+  display: none!important;
+}
+
 .ec-cart {
   display: block!important;
-
+  //
   > * {
     padding: 0!important;
     width: 100%!important;
-    margin-left: auto!important;
   }
-
-  &__sidebar {
-
-  }
-
+  //
+  //&__sidebar {
+  //
+  //}
+  //
   &__body {
-    max-width: 400px!important;
+    margin: 0 auto!important;
+    max-width: 600px!important;
   }
-
+  //
   &__summary {
     width: auto!important;
     margin-left: auto!important;
+  }
+  .page-title__name {
+    display: none;
+  }
+}
+
+.ec-cart-summary {
+  &__body:nth-child(2) {
+    display: none!important;
+  }
+  &__title {
+    text-transform: lowercase!important;
+  }
+  &__price {
+    color: var(--bs-primary)!important;
+  }
+}
+
+.ec-cart-item {
+  &__title {
+    font-weight: var(--body-font-weight) !important;
+    color: var(--bs-primary)!important;
+  }
+  &__price {
+    color: var(--bs-primary)!important;
+  }
+  &__wrap {
+    display: flex!important;
+    flex-direction: row!important;
+    align-items: center!important;
+  }
+  &__wrap-primary {
+    flex: 1 0 0!important;
+  }
+  &__wrap-secondary {
+    width:auto!important;
+    flex: 1 0 0!important;
+  }
+}
+
+.form-control__button {
+  padding: .25rem .375rem!important;
+  min-height: auto!important;
+  border: 3px solid var(--bs-primary)!important;
+  background-color: white!important;
+  border-radius: 0!important;
+  color: var(--bs-primary)!important;
+  font-size: 1rem!important;
+  font-weight: 700!important;
+  text-transform: uppercase!important;
+}
+
+.grid-product {
+
+  &__wrap-inner {
+    height: 100%!important;
+  }
+
+  &__image {
+    order: 1!important;
+  }
+
+  &__sku {
+    order: 2!important;
+    color: var(--body-color)!important;
+    margin: .25rem 0!important;
+  }
+
+  &__title {
+    order: 3!important;
+    margin-top: 0!important;
+    margin-bottom: auto!important;
+  }
+
+  &__title-inner {
+    color: var(--bs-primary)!important;
+    font-weight: var(--headings-font-weight)!important;
+    font-size: var(--product-item-title-font-size)!important;
+    line-height: var(--headings-line-height);
+  }
+
+  &__price {
+    order: 4!important;
+  }
+
+  &__price-amount {
+    margin-top: 1rem!important;
+    padding: .25rem 0!important;
+    color: var(--bs-primary)!important;
+    font-size: .875rem!important;
+    font-weight: var(--body-font-weight)!important;
+    border-top: 1px solid var(--bs-primary)!important;
+    border-bottom: 1px solid var(--bs-primary)!important;
+  }
+}
+
+.product-details {
+  &__product-price-taxes {
+    display: none!important;
+  }
+  &__sidebar {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  &__product-title {
+    width: 100%;
+    text-align: center!important;
+  }
+  &__product-price-row {
+    width: 33.33333%;
+    margin: 0!important;
+  }
+  &__product-price {
+    margin: 0!important;
+  }
+  &__product-options {
+    display: none;
+  }
+  &__action-panel {
+    width: 66.6666%;
+    margin: 0!important;
+    .product-details-module__content {
+      display: flex;
+      align-items: center;
+    }
+    .details-product-purchase__qty {
+      flex: 0 0 auto;
+      margin: 0!important;
+    }
+    .details-product-purchase__controls {
+      flex: 1 0 0;
+      margin: 0!important;
+    }
+  }
+  &__general-info {
+    width: 100%;
+    margin-top: 1.5rem!important;
+
+    .product-details-module__title {
+      display: none;
+    }
+  }
+}
+.details-product-price {
+  &__value {
+    color: var(--bs-primary)!important;
+    font-weight: var(--body-font-weight)!important;
+  }
+}
+
+.details-product-purchase {
+  &__place {
+    display: none!important;
+  }
+  &__qty-label {
+    display: none;
+  }
+  &__controls {
+    min-height: auto!important;
+    height: auto!important;
+  }
+  &__add-buttons button {
+    background-color: transparent!important;
+    color: var(--bs-primary)!important;
+    font-weight: var(--body-font-weight)!important;
+    font-size: 1.25rem!important;
+    text-transform: none!important;
+    border: 0!important;
+  }
+  &__checkout-controls {
+    display: none;
+  }
+}
+
+.details-gallery {
+  &__images-spacer {
+    height: 500px;
+  }
+  &__images{
+    background-color: #000!important;
+    padding: 3rem!important;
   }
 }
