--- a/source/_assets/scss/_ecwid.scss
+++ b/source/_assets/scss/_ecwid.scss
@@ -47,6 +47,10 @@
 }
 
 .ec-cart-item {
+  &__image {
+    display: flex;
+    align-items: center;
+  }
   &__title {
     font-weight: var(--body-font-weight) !important;
     color: var(--bs-primary)!important;
@@ -65,6 +69,18 @@
   &__wrap-secondary {
     width:auto!important;
     flex: 1 0 0!important;
+  }
+  &__control {
+    margin-right: .5rem!important;
+  }
+  &__control-inner {
+    color: red!important;
+  }
+}
+
+.ec-cart-shopping {
+  &__wrap {
+    display: none;
   }
 }
 
